--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/binutils-gdb
+/new-fedora-release
 /gdb-libstdc++-v3-python-8.1.1-20180626.tar.xz
 /v2.0.4.tar.gz
-/gdb-10.2.tar.xz
+/gdb-11.1.tar.xz
